--- a/assets/index.html
+++ b/assets/index.html
@@ -1,34 +1,61 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Start Page | Fabri'Know</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script async defer src="./buttons.js"></script>
-  <script async defer src="./renderer.js"></script>
-  <link rel="stylesheet" href="./normalize.min.css">
-  <link rel='stylesheet' href='./css.css?family=Roboto:300,400,500|Product+Sans:300,400,500|Material+Icons'>
-  <link rel='stylesheet' href='./bootstrap.min.css'>
-  <link rel="stylesheet" href="./style.css">
+  <title>FKW</title>
+  <link rel="stylesheet" href="electron-tabs.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
-  <div id="content"></div>
-  <div class="fluid-container">
-    <div class="sites">
-      <a id="3cx" href="https://appel.comon-real.fr/webclient/#/people"><img src="./images/3cx.png" /><span id="title">3CX</span></a>
-      <a id="Google Drive" href="https://drive.google.com/drive/u/0/folders/1yPR7y1qWI_arTacQBcMMeVkjVJpMryJC"><img src="./images/Google_Drive_logo.png" /><span id="title">Google Drive</span></a>
-      <a id="Notion" href="https://www.notion.so/fabriknow"><img src="./images/Notion_app_logo.png" /><span id="title">Notion</span></a>
-      <a id="Notion" href="https://frame.io"><img src="./images/Frame.io_.png" /><span id="title">Frame.io</span></a>
-      <a href="./baipgmmeifmofkcilhccccoipmjccehn.crx">https://chrome.google.com/webstore/detail/3cx/baipgmmeifmofkcilhccccoipmjccehn</a>
-   </div>
+<body style="margin:0">
+
+<div class="etabs-tabgroup">
+  <div class="etabs-tabs"></div>
+  <div class="etabs-buttons">
+<div class="right" style="float: right;">
+    <button onclick="document.location.reload();"><i class="fas fa-sync-alt"></i></button>
+</div>
   </div>
-  <script>
-    var links = document.links;
-for (var i = 0; i < links.length; i++) {
-     mainWindow.loadURL(links[i])
-}
-  </script>
+</div>
+<div class="etabs-views"></div>
+
+
+<script>
+  const TabGroup = require('electron-tabs') //normally but for demo :
+  let tabGroup = new TabGroup({});
+
+  tabGroup.addTab({
+    title: '3CX',
+    src: 'https://appel.comon-real.fr/webclient/#/people',
+    iconURL: './images/3cx.png',
+    active: true,
+    closable: false,
+  });
+
+  tabGroup.addTab({
+    title: "Notion.so",
+    src: 'https://www.notion.so/fabriknow',
+    iconURL: './images/Notion_app_logo.png',
+    //webviewAttributes: 'allowpopups',
+    closable: false,
+  });
+  tabGroup.addTab({
+    title: "Frame.io",
+    src: 'https://frame.io',
+    iconURL: './images/Frame.io_.png',
+    closable: false,
+  });
+  tabGroup.addTab({
+    title: "Google Drive",
+    src: 'https://drive.google.com/drive/u/0/folders/1yPR7y1qWI_arTacQBcMMeVkjVJpMryJC',
+    iconURL: './images/Google_Drive_logo.png',
+    closable: false,
+  });
+  tabGroup.addTab({
+    title: "Mail",
+    src: 'https://mail.comon-real.fr',
+    iconURL: './images/roundcube.png',
+    closable: false,
+  });
+ </script>
 </body>
 </html>
