--- a/assets/index.html
+++ b/assets/index.html
@@ -11,9 +11,9 @@
 <div class="etabs-tabgroup">
   <div class="etabs-tabs"></div>
   <div class="etabs-buttons">
-<div class="right" style="float: right;">
+<!-- <div class="right" style="float: right;">
     <button onclick="document.location.reload();"><i class="fas fa-sync-alt"></i></button>
-</div>
+</div> -->
   </div>
 </div>
 <div class="etabs-views"></div>
@@ -44,12 +44,12 @@
     iconURL: './images/Frame.io_.png',
     closable: false,
   });
-  tabGroup.addTab({
+ /* tabGroup.addTab({
     title: "Google Drive",
     src: 'https://drive.google.com/drive/u/0/folders/1yPR7y1qWI_arTacQBcMMeVkjVJpMryJC',
     iconURL: './images/Google_Drive_logo.png',
     closable: false,
-  });
+  });*/
   tabGroup.addTab({
     title: "Mail",
     src: 'https://mail.comon-real.fr',
